--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,11 @@ body {
   @apply bg-gray-900 text-gray-100;
   -webkit-font-smoothing: antialiased;
 }
+
+.accent {
+  @apply font-bold text-blue-500;
+}
+
+.input {
+  @apply bg-gray-900 p-4 text-gray-300 rounded text-sm
+}
